2004-07-26  Dalibor Topic  <robilad@kaffe.org>

        * libraries/javalib/gnu/java/nio/VMPipe.java,
        libraries/javalib/gnu/java/security/action/SetAccessibleAction.java:
	New files. Taken from GNU Classpath.

        * libraries/javalib/Makefile.am,
        libraries/javalib/Makefile.in,
        libraries/javalib/all.files:
	Regenerated.

        * libraries/javalib/gnu/java/awt/ComponentDataBlitOp.java,
        libraries/javalib/gnu/java/awt/peer/gtk/GtkMenuPeer.java,
        libraries/javalib/gnu/java/io/EncodingManager.java,
        libraries/javalib/gnu/java/math/MPN.java,
        libraries/javalib/gnu/java/net/content/text/plain.java,
        libraries/javalib/gnu/java/net/protocol/file/Connection.java,
        libraries/javalib/gnu/java/net/protocol/http/Connection.java,
        libraries/javalib/gnu/java/net/protocol/jar/Connection.java,
        libraries/javalib/gnu/java/net/protocol/jar/Handler.java,
        libraries/javalib/gnu/java/nio/FileLockImpl.java,
        libraries/javalib/gnu/java/nio/PipeImpl.java,
        libraries/javalib/gnu/java/nio/SocketChannelImpl.java,
        libraries/javalib/gnu/java/rmi/dgc/DGCImpl.java,
        libraries/javalib/gnu/java/rmi/rmic/CompilerProcess.java,
        libraries/javalib/gnu/java/rmi/rmic/RMIC.java,
        libraries/javalib/gnu/java/security/Engine.java,
        libraries/javalib/java/applet/Applet.java,
        libraries/javalib/java/io/BufferedWriter.java,
        libraries/javalib/java/io/File.java,
        libraries/javalib/java/io/FilterWriter.java,
        libraries/javalib/java/io/ObjectInputStream.java,
        libraries/javalib/java/io/ObjectOutputStream.java,
        libraries/javalib/java/io/ObjectStreamClass.java,
        libraries/javalib/java/io/PrintWriter.java,
        libraries/javalib/java/math/BigDecimal.java,
        libraries/javalib/java/net/DatagramSocket.java,
        libraries/javalib/java/net/Socket.java,
        libraries/javalib/java/net/SocketPermission.java,